# bunny

./: .gitignore  Cargo.toml  README.md  copilot-generated.html  flake.nix  hyper.csv
examples/: alias.bny  compose.bny  compose1.bny  default-args.bny  defaults-everywhere.bny  direct.bny  duplicate-names.bny  fibonacci.bny  fibonacci.py  get-test.bny  if-test.bny  inference1.bny  inference2.bny  inference3.bny  inference4.bny  inference5.bny  lazy-array.bny  map.bny  never-say-never.bny  radius.bny  redefine.bny  simple-plus.bny  single-call.bny  two-calls.bny  y.bny
examples/errors/: duplicate-arg-name.bny  syntax-err-1.bny  unknown-identifier-2.bny
presentation/: presentation.html  presentation.md
presentation/backup-in-case-everything-splits/: presentation.html  presentation.md  prezi.html
presentation/code/: chart.bny  generate-presentation.bny  presentation-template.html  slide-template.html
proptest-regressions/parser/: mod.txt
src/: cli.rs  interpreter.rs  main.rs  renderer.rs  svg.rs
src/ag/: mod.rs
src/ast/: expressions.rs  mod.rs  parsed.rs  scoped.rs  symbol_table.rs
src/debug/: mod.rs
src/hm/: typ.rs
src/parser/: grammar.pest  mod.rs
src/parser/examples/: default-args.bny  duplicate-names.bny  fibonacci.bny  fibonacci.py  func-return.bny  if-test.bny  infinite-list.bny  map.bny  nested-call-1-layer.bny  nested-def-1-layer.bny  never-say-never.bny  pass-lambda.bny  scoping-perf-test.bny  simple.bny  simpler.bny  single-call.bny  (+1 more)
src/runner/: mod.rs  value.rs
src/types/: hm.rs  mod.rs  typ.rs  typed.rs  typed_expression.rs  util.rs
(+1 files in other folders)
