[package]
name = "bunny"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive", "cargo"] }
const_format = "0.2.34"
pest = { version = "2.7.15", features = ["miette-error", "pretty-print"] }
pest_derive = "2.7.15"
proptest = "1.6.0"
text_trees = "0.1.2"
