[package]
name = "bunny"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive", "cargo"] }
const_format = "0.2.34"
esvg = "0.5.0"
im = "15.1.0"
imstr = "0.2.0"
palette = "0.7.6"
pest = { version = "2.7.15", features = ["miette-error", "pretty-print"] }
pest_derive = "2.7.15"
polygonical = "0.5.0"
proptest = "1.6.0"
rand = "0.9.0"
text_trees = "0.1.2"

[profile.release]
debug = true
